fix: z-index new-message-btn handset

--- a/src/app/overlay/settings/settings.component.scss
+++ b/src/app/overlay/settings/settings.component.scss
@@ -4,7 +4,6 @@
   background-color: var(--color-white);
   width: 280px;
   height: 180px;
-  z-index: 10;
   border-top-right-radius: 0 !important;
   padding: 38px;
   position: absolute;
