--- a/src/app/pages/dashboard/sidenav/sidenav.component.scss
+++ b/src/app/pages/dashboard/sidenav/sidenav.component.scss
@@ -38,7 +38,6 @@ app-contacts-list {
   bottom: 57px;
   right: 16px;
   box-shadow: 0px 6px 10px 0px #00000033;
-  z-index: 10000;
   &:active {
     background-color: var(--color-purple-light);
   }
